[tool.poetry]
name = "c4s"
version = "0.1.0"
description = "social network 'c4s (community for students)'"
authors = ["Pavel <olkov1634520@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
djangorestframework = "^3.14.0"
pillow = "^9.5.0"
psycopg2 = "^2.9.6"
djoser = "^2.2.0"
djangorestframework-simplejwt = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
